# image_processing

./: Cargo.toml  README.md
src/: detection_contour.rs  lib.rs  main.rs  operateur.rs  tools.rs
src/filters/: edge_detection.rs  morphological.rs
text_folder/: sortie_png_to_ascii.txt
